--- a/Epicture/app/src/main/res/layout/test.xml
+++ b/Epicture/app/src/main/res/layout/test.xml
@@ -40,6 +40,27 @@
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:layout_margin="8dp"
                 android:textAlignment="center"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="UpVote"
+                    android:id="@+id/up"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="DownVote"
+                    android:id="@+id/down"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/app_name"
+                    android:id="@+id/nbVote"/>
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
